feat: Добавлена стоимость услуги в Post /order и Get /client/orders
